an attempt to clean